Implementaciones: Se agrego la logica de negocio y queda funcional el servicio

--- a/src/app/features/posts/posts.component.html
+++ b/src/app/features/posts/posts.component.html
@@ -23,14 +23,8 @@
     </app-post-form>
   </div>
 
-  <!-- Loading -->
-  <div *ngIf="loading" class="loading">
-    <div class="spinner"></div>
-    <p>Cargando publicaciones...</p>
-  </div>
-
   <!-- Lista de Posts -->
-  <div *ngIf="!loading && !showCreateForm && !editingPost" class="posts-grid">
+  <div *ngIf="!showCreateForm && !editingPost" class="posts-grid">
     <div *ngFor="let post of posts" class="post-card">
       <h3>{{ post.title }}</h3>
       <p class="user-id">Usuario: {{ post.userId }}</p>
